 * Fixed hedgehogs saying “Missed” when drowning enemy without dealing damage
 * Fixed enemy saying "Missed” when giving poison without direct damage
 * Fixed hedgehogs not saying “Stupid” and not displaying announcer message for inflicting self-harm
 * Fixed incorrect time box tooltip when in Sudden Death
 * Remove buggy /finish chat command
 * Various other fixes

Highlander:
 + Show collected weapons after kill and play sound
 + Mission panel now shows all game modifiers (e.g. mines time, vampirism, etc.)
 * Removed "Freezer"/IceGun from the default Highlander weaponset

Construction Mode:
 + Added script parameter support:
  + initialenergy: Amount of energy at start
  + energyperround: New energy per round
  + maxenergy: Maximum allowed energy
  + cratesperround: Maximum placable crates per round
 + Completely reworked all in-game texts and descriptions
 * Fix rubber being placable inside land
 * Fix invalid girder placement costing energy
 * Special tools like structure placer now have their own proper descriptions (instead of Air Attack description, etc.)
 * Costs for weapon and utility crates were all equal
 * Remove airplane cursor
 * Many other fixes and tweaks

Racer and TechRacer:
 + Allow to only place 2 waypoints in Racer
 + Allow to remove Racer waypoints with precise key
 + New script parameters for Racer:
  + rounds: Number of rounds to play
  + waypointradius: Size of waypoints
  + maxwaypoints: Maximum allowed number of waypoints
 + Show correct ranking and times in stats screen of Racer and TechRacer
 * Fix description and icon of waypoint placement tool in Racer
 * Remove airplane cursor in Racer
 * Fixed waypoint message in TechRacer and Racer overwriting current weapon selection message
 * Fixed TechRacer not recording finish if time was >= 100s

WxW:
 + Support for multiple sets of walls per map
 + Add optional “Crate Before Attack” rule
 + Add optional “All But Last” rule
 + Add optional “Kill The Leader” rule