@@ -45,6 +45,7 @@ Game engine:
  * Fixed enemy saying "Missed” when giving poison without direct damage
  * Fixed hedgehogs not saying “Stupid” and not displaying announcer message for inflicting self-harm
  * Fixed incorrect time box tooltip when in Sudden Death
+ * Fixed cake taking over 200 seconds to explode when its stuck and can't move
  * Remove buggy /finish chat command
  * Various other fixes
 
